--- a/server/package.json
+++ b/server/package.json
@@ -6,13 +6,14 @@
   "scripts": {
     "test": "test",
     "start": "nodemon server.js",
-    "build":"npm i"
+    "build": "npm i"
   },
   "author": "Timothy-Squim",
   "license": "ISC",
   "dependencies": {
     "axios": "^1.6.2",
     "bcrypt": "^5.1.1",
+    "cloudinary": "^1.41.1",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
