--- a/app/package.json
+++ b/app/package.json
@@ -7,7 +7,8 @@
     "ios": "react-native run-ios",
     "lint": "eslint .",
     "start": "react-native start",
-    "test": "jest"
+    "test": "jest",
+    "proxy":"https://squim-native-app.onrender.com"
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.21.0",
