--- a/app/package.json
+++ b/app/package.json
@@ -8,7 +8,7 @@
     "lint": "eslint .",
     "start": "react-native start",
     "test": "jest",
-    "proxy":"https://squim-native-app.onrender.com"
+    "proxy": "https://squim-native-app.onrender.com"
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.21.0",
@@ -31,6 +31,7 @@
     "react-native-fontawesome": "^7.0.0",
     "react-native-gesture-handler": "^2.14.0",
     "react-native-heroicons": "^3.2.0",
+    "react-native-image-slider-box": "^2.0.7",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-progress": "^5.0.1",
     "react-native-reanimated-carousel": "^3.5.1",
