--- a/app/package.json
+++ b/app/package.json
@@ -33,6 +33,7 @@
     "react-native-heroicons": "^3.2.0",
     "react-native-image-slider-box": "^2.0.7",
     "react-native-linear-gradient": "^2.8.3",
+    "react-native-picker-select": "^9.0.0",
     "react-native-progress": "^5.0.1",
     "react-native-reanimated-carousel": "^3.5.1",
     "react-native-safe-area-context": "^4.7.4",
