--- a/app/package.json
+++ b/app/package.json
@@ -8,7 +8,7 @@
     "lint": "eslint .",
     "start": "react-native start",
     "test": "jest",
-    "proxy": "https://squim-native-app.onrender.com"
+    "proxy": "http://192.168.88.19:1200"
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.21.0",
