--- a/app/package.json
+++ b/app/package.json
@@ -20,28 +20,22 @@
     "axios": "^1.6.2",
     "country-state-city": "^3.2.1",
     "dotenv": "^16.3.1",
-    "immer": "^10.0.3",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-country-state-city": "^1.1.0",
-    "react-icons": "^4.12.0",
     "react-native": "0.72.7",
     "react-native-chart-kit": "^6.12.0",
     "react-native-document-picker": "^9.1.0",
-    "react-native-fontawesome": "^7.0.0",
     "react-native-gesture-handler": "^2.14.0",
     "react-native-heroicons": "^3.2.0",
     "react-native-image-slider-box": "^2.0.7",
     "react-native-linear-gradient": "^2.8.3",
-    "react-native-picker-select": "^9.0.0",
     "react-native-progress": "^5.0.1",
-    "react-native-reanimated-carousel": "^3.5.1",
+    "react-native-restart": "^0.0.27",
     "react-native-safe-area-context": "^4.7.4",
     "react-native-screens": "^3.27.0",
-    "react-native-snap-carousel": "^3.9.1",
     "react-native-svg": "^14.1.0",
     "react-native-toast-message": "^2.2.0",
-    "react-native-vector-icons": "^10.0.3",
     "react-redux": "^9.0.2",
     "redux": "^5.0.0",
     "redux-thunk": "^3.1.0",
