--- a/server/package.json
+++ b/server/package.json
@@ -25,6 +25,7 @@
     "nodemailer": "^6.9.7",
     "nodemon": "^3.0.2",
     "request": "^2.88.2",
+    "sharp": "^0.33.2",
     "textflow.js": "^0.1.4"
   }
 }
