--- a/server/package.json
+++ b/server/package.json
@@ -26,6 +26,7 @@
     "nodemon": "^3.0.2",
     "request": "^2.88.2",
     "sharp": "^0.33.2",
-    "textflow.js": "^0.1.4"
+    "textflow.js": "^0.1.4",
+    "uuid": "^9.0.1"
   }
 }
