--- a/app/package.json
+++ b/app/package.json
@@ -20,6 +20,7 @@
     "axios": "^1.6.2",
     "country-state-city": "^3.2.1",
     "dotenv": "^16.3.1",
+    "lottie-react-native": "^6.5.1",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-country-state-city": "^1.1.0",
@@ -34,6 +35,7 @@
     "react-native-restart": "^0.0.27",
     "react-native-safe-area-context": "^4.7.4",
     "react-native-screens": "^3.27.0",
+    "react-native-splash-screen": "^3.3.0",
     "react-native-svg": "^14.1.0",
     "react-native-toast-message": "^2.2.0",
     "react-redux": "^9.0.2",
