--- a/app/package.json
+++ b/app/package.json
@@ -26,6 +26,7 @@
     "react-country-state-city": "^1.1.0",
     "react-native": "0.72.7",
     "react-native-chart-kit": "^6.12.0",
+    "react-native-countdown-component": "^2.7.1",
     "react-native-document-picker": "^9.1.0",
     "react-native-gesture-handler": "^2.14.0",
     "react-native-heroicons": "^3.2.0",
