--- a/server/.env
+++ b/server/.env
@@ -7,3 +7,7 @@ URL='https://squim-native-app.onrender.com'
 CLOUD_NAME="djklwxwx0"
 CLOUD_SECRET="dmko9Vre1IHyD66BsnkC05orQl0"
 CLOUD_API_KEY="283327556565479"
+TWILIO_SID="ACe6008fd498f7809c2f5df89bec138e57"
+TWILIO_TOKEN="2e63f0f5cc2df0b2c0535de9a2269c1b"
+TWILIO_PHONE="+2540748143442"
+TwilioAuth='R1QJ5BNZGPLJ3QJL5VFLBZRQ'
