--- a/server/package.json
+++ b/server/package.json
@@ -27,6 +27,7 @@
     "request": "^2.88.2",
     "sharp": "^0.33.2",
     "textflow.js": "^0.1.4",
+    "twilio": "^4.20.1",
     "uuid": "^9.0.1"
   }
 }
