--- a/app/package.json
+++ b/app/package.json
@@ -17,6 +17,7 @@
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/stack": "^6.3.20",
     "@reduxjs/toolkit": "^2.0.1",
+    "@stripe/stripe-react-native": "^0.35.1",
     "axios": "^1.6.2",
     "country-state-city": "^3.2.1",
     "dotenv": "^16.3.1",
