--- a/app/package.json
+++ b/app/package.json
@@ -12,12 +12,11 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.21.0",
-    "@react-native-masked-view/masked-view": "^0.3.1",
+    "@react-native-masked-view/masked-view": "^0.2.9",
     "@react-native-picker/picker": "^2.6.1",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/stack": "^6.3.20",
     "@reduxjs/toolkit": "^2.0.1",
-    "@stripe/stripe-react-native": "^0.35.1",
     "axios": "^1.6.2",
     "country-state-city": "^3.2.1",
     "dotenv": "^16.3.1",
@@ -43,7 +42,8 @@
     "react-redux": "^9.0.2",
     "redux": "^5.0.0",
     "redux-thunk": "^3.1.0",
-    "tailwindcss": "^3.3.2"
+    "tailwindcss": "3.3.2",
+    "update": "^0.7.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
